--- a/DIP/Exercises/Lab03/Lab03_523H0164.ipynb
+++ b/DIP/Exercises/Lab03/Lab03_523H0164.ipynb
@@ -581,78 +581,42 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import cv2\n",
-        "import numpy as np\n",
-        "\n",
-        "\n",
-        "# Load the logo image\n",
-        "logo = cv2.imread(\"tdt_logo.png\")\n",
-        "if logo is None:\n",
-        "    print(\"Error: Could not load logo image. Make sure 'tdt_logo.png' is in the correct folder.\")\n",
-        "    exit()\n",
-        "\n",
-        "# Resize the logo to a suitable size (e.g., 200 pixels wide)\n",
-        "# while maintaining its aspect ratio.\n",
-        "scale_percent = 200 / logo.shape[1] \n",
-        "width = int(logo.shape[1] * scale_percent)\n",
-        "height = int(logo.shape[0] * scale_percent)\n",
-        "logo = cv2.resize(logo, (width, height), interpolation=cv2.INTER_AREA)\n",
-        "\n",
-        "# Create a grayscale version of the logo to make a mask\n",
-        "logo_gray = cv2.cvtColor(logo, cv2.COLOR_BGR2GRAY)\n",
-        "\n",
-        "# Create the mask: anything that is not white (i.e., the colored parts of the logo)\n",
-        "# will become white (255) in the mask. The white background becomes black (0).\n",
-        "# This mask isolates the logo shape.\n",
-        "ret, logo_mask = cv2.threshold(logo_gray, 240, 255, cv2.THRESH_BINARY_INV)\n",
-        "\n",
-        "# Create the inverse of the mask. This will be used to black-out the area\n",
-        "# in the webcam frame where the logo will be placed.\n",
-        "logo_mask_inv = cv2.bitwise_not(logo_mask)\n",
-        "\n",
-        "# --- Step 2: Initialize Webcam ---\n",
-        "cap = cv2.VideoCapture(0) # 0 is the default webcam\n",
+        "cap = cv2.VideoCapture(0)\n",
         "\n",
         "if not cap.isOpened():\n",
-        "    print(\"Error: Cannot open webcam.\")\n",
-        "    exit()\n",
+        "    raise IOError(\"cannot open the webcam\")\n",
         "\n",
-        "# --- Step 3: Main loop to process video frames ---\n",
+        "logo = cv2.imread(\"exercise2.png\")\n",
+        "\n",
+        "# resize the image\n",
+        "\n",
+        "\n",
+        "frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+        "frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+        "fps = 60\n",
+        "\n",
+        "fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+        "out = cv2.VideoWriter('output.mp4', fourcc, fps, (frame_width, frame_height))\n",
+        "\n",
         "while True:\n",
-        "    # Read a frame from the webcam\n",
         "    ret, frame = cap.read()\n",
+        "\n",
         "    if not ret:\n",
-        "        print(\"Can't receive frame. Exiting ...\")\n",
         "        break\n",
-        "        \n",
-        "    # We want to place the logo at the top-right corner, so we define the\n",
-        "    # Region of Interest (ROI) there. The size of the ROI must match the logo's size.\n",
-        "    rows, cols, channels = logo.shape\n",
-        "    roi = frame[10:10+rows, frame.shape[1]-10-cols:frame.shape[1]-10]\n",
+        "    \n",
+        "    # add the logo \n",
+        "    \n",
+        "    out.write(frame)\n",
+        "    cv2.imshow('video with logo tdtu', frame)\n",
         "\n",
-        "    # --- Step 4: Overlay the logo onto the frame ---\n",
-        "    \n",
-        "    # Black-out the area of the logo in the ROI using the inverse mask\n",
-        "    frame_bg = cv2.bitwise_and(roi, roi, mask=logo_mask_inv)\n",
-        "    \n",
-        "    # Take only the colored region of the logo using the primary mask\n",
-        "    logo_fg = cv2.bitwise_and(logo, logo, mask=logo_mask)\n",
-        "    \n",
-        "    # Add the two images together to get the final result\n",
-        "    dst = cv2.add(frame_bg, logo_fg)\n",
-        "    \n",
-        "    # Place the modified ROI back into the main frame\n",
-        "    frame[10:10+rows, frame.shape[1]-10-cols:frame.shape[1]-10] = dst\n",
-        "\n",
-        "    # --- Step 5: Display the result ---\n",
-        "    cv2.imshow('Webcam with Logo', frame)\n",
-        "\n",
-        "    # Exit the loop if the 'q' key is pressed\n",
-        "    if cv2.waitKey(1) == ord('q'):\n",
+        "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
         "        break\n",
+        "    \n",
         "\n",
-        "# --- Cleanup ---\n",
+        "# clean up \n",
         "cap.release()\n",
+        "out.release()\n",
+        "\n",
         "cv2.destroyAllWindows()"
       ]
     }
@@ -662,7 +626,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "myenv",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -676,7 +640,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.18"
+      "version": "3.13.7"
     }
   },
   "nbformat": 4,
