--- a/DIP/Exercises/Lab04/Lab04_523H0164.ipynb
+++ b/DIP/Exercises/Lab04/Lab04_523H0164.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "255efdb0",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import math\n",
     "\n",
     "def display_image(image, title=\"Image\", student_id=\"523H0164\"):\n",
     "    img_to_show = image.copy()\n",
@@ -69,14 +70,12 @@
    "source": [
     "### Exercise 1: Image binarization\n",
     "\n",
-    "Using thresholding techniques to convert the grayscale sudoku image into a binary image. Choose the method that gives the best-looking result.\n",
-    "\n",
-    "**Analysis:** The sudoku image has uneven lighting, so `Adaptive Thresholding` is the best choice."
+    "Using thresholding techniques to convert the grayscale sudoku image into a binary image. Choose the method that gives the best-looking result.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "250efc58",
    "metadata": {},
    "outputs": [
@@ -102,24 +101,20 @@
     }
    ],
    "source": [
-    "# Load the image and convert to grayscale\n",
     "img_sudoku = cv2.imread('sudoku.png')\n",
     "img_sudoku_gray = cv2.cvtColor(img_sudoku, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "# Apply blurring to reduce noise\n",
     "img_sudoku_blur = cv2.medianBlur(img_sudoku_gray, 5)\n",
     "\n",
-    "# Adaptive Thresholding\n",
     "adaptive_thresh = cv2.adaptiveThreshold(\n",
     "    img_sudoku_blur, \n",
     "    255, \n",
     "    cv2.ADAPTIVE_THRESH_GAUSSIAN_C, \n",
-    "    cv2.THRESH_BINARY_INV, # Invert to get black numbers on a white background\n",
+    "    cv2.THRESH_BINARY_INV,\n",
     "    11, \n",
     "    2\n",
     ")\n",
     "\n",
-    "# Display the original image and the result\n",
     "display_image(img_sudoku, title=\"Original Sudoku Image\")\n",
     "display_image(adaptive_thresh, title=\"Adaptive Thresholding Result\")"
    ]
@@ -132,16 +127,12 @@
     "### Exercise 2: Number bounding-box\n",
     "\n",
     "Using morphological operations and contours to draw a rectangle surrounding each *number* (composed of multiple digits).\n",
-    "\n",
-    "**Hint:**\n",
-    "1. Convert to a binary image.\n",
-    "2. Use `dilation` to connect the digits of each number into a single blob.\n",
-    "3. Find contours and draw the bounding boxes."
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "9b793666",
    "metadata": {},
    "outputs": [
@@ -177,19 +168,15 @@
     }
    ],
    "source": [
-    "# Load the original and grayscale images\n",
     "img_numbers_color = cv2.imread('numbers.png')\n",
     "img_numbers_gray = cv2.cvtColor(img_numbers_color, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "# Step 1: Threshold to create a binary mask\n",
     "_, mask = cv2.threshold(img_numbers_gray, 30, 255, cv2.THRESH_BINARY)\n",
     "\n",
-    "# Step 2: Use dilation to connect the digits\n",
-    "# A wide rectangular kernel helps connect digits horizontally\n",
+    "\n",
     "kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (10, 5))\n",
     "dilated_mask = cv2.dilate(mask, kernel, iterations=2)\n",
     "\n",
-    "# Step 3: Find contours and draw bounding boxes\n",
     "contours, _ = cv2.findContours(dilated_mask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
     "output_ex2 = img_numbers_color.copy()\n",
@@ -197,7 +184,6 @@
     "    x, y, w, h = cv2.boundingRect(cnt)\n",
     "    cv2.rectangle(output_ex2, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
     "\n",
-    "# Display the steps and the final result\n",
     "display_image(img_numbers_color, title=\"Original Numbers Image\")\n",
     "display_image(dilated_mask, title=\"Dilated Mask\")\n",
     "display_image(output_ex2, title=\"Number Bounding Boxes\")"
@@ -220,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "7b9368e8",
    "metadata": {},
    "outputs": [
@@ -256,29 +242,23 @@
     }
    ],
    "source": [
-    "# Load the original and grayscale images\n",
     "img_digits_color = cv2.imread('digits.png')\n",
     "img_digits_gray = cv2.cvtColor(img_digits_color, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "# Step 1: Inverse thresholding (to get white digits on a black background)\n",
     "_, mask_digits = cv2.threshold(img_digits_gray, 128, 255, cv2.THRESH_BINARY_INV)\n",
     "\n",
-    "# Step 2: Use opening to remove noise\n",
-    "# A small kernel is used to avoid merging adjacent digits\n",
+    "\n",
     "kernel_digits = cv2.getStructuringElement(cv2.MORPH_RECT, (2, 2))\n",
     "opened_mask = cv2.morphologyEx(mask_digits, cv2.MORPH_OPEN, kernel_digits, iterations=1)\n",
     "\n",
-    "# Step 3: Find contours and draw bounding boxes\n",
     "contours_digits, _ = cv2.findContours(opened_mask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
     "output_ex3 = img_digits_color.copy()\n",
     "for cnt in contours_digits:\n",
-    "    # Filter out very small contours (which might be noise)\n",
     "    if cv2.contourArea(cnt) > 15:\n",
     "        x, y, w, h = cv2.boundingRect(cnt)\n",
     "        cv2.rectangle(output_ex3, (x, y), (x + w, y + h), (0, 0, 255), 2)\n",
     "\n",
-    "# Display the steps and the final result\n",
     "display_image(img_digits_color, title=\"Original Digits Image\")\n",
     "display_image(opened_mask, title=\"Opened Mask (Noise Removed)\")\n",
     "display_image(output_ex3, title=\"Digit Bounding Boxes\")"
@@ -289,15 +269,14 @@
    "id": "271ff3f5",
    "metadata": {},
    "source": [
-    "### Homework\n",
+    "## Homework\n",
     "\n",
-    "- Improve the results of exercises 2 and 3 by experimenting with different kernel sizes and morphological operations (closing, erosion, ...).\n",
-    "- Explore \"Hand detection and finger counting\" applications."
+    "### 1. Improve the results of exercises 2 and 3 by experimenting with different kernel sizes and morphological operations (closing, erosion, ...)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "f63aae65",
    "metadata": {},
    "outputs": [
@@ -313,24 +292,15 @@
     }
    ],
    "source": [
-    "# --- Improved Code for Ex 4.2 ---\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "\n",
-    "# Load images\n",
     "img_numbers_color = cv2.imread('numbers.png')\n",
     "img_numbers_gray = cv2.cvtColor(img_numbers_color, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "# Step 1: Threshold to create a binary mask\n",
     "_, mask = cv2.threshold(img_numbers_gray, 30, 255, cv2.THRESH_BINARY)\n",
     "\n",
-    "# Step 2: Use more aggressive dilation\n",
-    "# We increase iterations to 2 to ensure all digits connect.\n",
+    "\n",
     "kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (10, 5))\n",
-    "# Applying dilation twice makes the connection stronger\n",
     "dilated_mask = cv2.dilate(mask, kernel, iterations=2)\n",
     "\n",
-    "# Step 3: Find contours and draw bounding boxes\n",
     "contours, _ = cv2.findContours(dilated_mask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
     "output_ex2_improved = img_numbers_color.copy()\n",
@@ -338,14 +308,21 @@
     "    x, y, w, h = cv2.boundingRect(cnt)\n",
     "    cv2.rectangle(output_ex2_improved, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
     "\n",
-    "# Display the improved result\n",
     "display_image(output_ex2_improved, title=\"Improved Number Bounding Boxes\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57a816ef",
+   "metadata": {},
+   "source": [
+    "### 2.Explore some “Hand detection and finger counting” applications"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "fab7c5f3",
+   "execution_count": 6,
+   "id": "e6fa1242",
    "metadata": {},
    "outputs": [
     {
@@ -358,15 +335,9 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import math\n",
-    "import cv2\n",
-    "\n",
-    "# Text settings\n",
     "font = cv2.FONT_HERSHEY_PLAIN\n",
     "text_color = (255, 255, 255)\n",
     "\n",
-    "# Video Capture\n",
     "video_path = 'hand_video.mp4'\n",
     "cap = cv2.VideoCapture(video_path)\n",
     "\n",
@@ -374,75 +345,55 @@
     "    print(f\"Error: Cannot open video file at '{video_path}'\")\n",
     "    exit()\n",
     "\n",
-    "# Get video properties\n",
     "frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
     "frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
     "fps = cap.get(cv2.CAP_PROP_FPS)\n",
     "h, w = frame_height, frame_width\n",
     "\n",
-    "# Create VideoWriter object\n",
     "fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
     "output_path = 'finger_count_output.mp4'\n",
     "out = cv2.VideoWriter(output_path, fourcc, fps, (frame_width, frame_height))\n",
     "\n",
     "print(\"Processing video... This may take a moment.\")\n",
     "\n",
-    "# Define the Region Of Interest (ROI) window\n",
-    "# Adjust these values based on your video dimensions\n",
-    "top_left = (int(w*0.38), int(h*0.1))  # Approximately (245, 50) for 640x480\n",
-    "bottom_right = (int(w*0.9), int(h*0.61))  # Approximately (580, 295) for 640x480\n",
+    "top_left = (int(w*0.38), int(h*0.1))  \n",
+    "bottom_right = (int(w*0.9), int(h*0.61))  \n",
     "\n",
     "while True:\n",
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
     "        break\n",
     "    \n",
-    "    # Optional: Horizontal flip (uncomment if needed)\n",
-    "    # frame = cv2.flip(frame, 1)\n",
+    "    frame = cv2.flip(frame, 1)\n",
     "    \n",
-    "    # \"Paint\" (background) with black color this area of the frame\n",
-    "    frame[0:40, w-200:w] = (0)  # Rectangle for text background\n",
-    "    # Add text on screen inside the above black area\n",
+    "    frame[0:40, w-200:w] = (0) \n",
     "    cv2.putText(frame, \"Fingers : \", (w-190, 30), font, 2, text_color, 2)\n",
     "    \n",
-    "    # Draw a rectangle (yellow color) around ROI\n",
     "    cv2.rectangle(frame, (top_left[0]-5, top_left[1]-5), \n",
     "                  (bottom_right[0]+5, bottom_right[1]+5), (0, 255, 255), 3)\n",
     "    \n",
-    "    # ROI window for the tests (test_window)\n",
     "    test_window = frame[top_left[1]:bottom_right[1], top_left[0]:bottom_right[0]]\n",
     "    \n",
-    "    # Apply Gaussian Blur\n",
     "    test_window_blurred = cv2.GaussianBlur(test_window, (5, 5), 0)\n",
     "    \n",
-    "    # Transform to HSV format\n",
     "    hsv = cv2.cvtColor(test_window_blurred, cv2.COLOR_BGR2HSV)\n",
     "    \n",
-    "    # Create a range for the colors (skin color based on room light, may need to change)\n",
     "    lower_color = np.array([0, 24, 0])\n",
     "    upper_color = np.array([179, 255, 255])\n",
     "    \n",
-    "    # Create a mask\n",
     "    mask = cv2.inRange(hsv, lower_color, upper_color)\n",
     "    \n",
-    "    # Find contours inside the ROI\n",
     "    contours, hierarchy = cv2.findContours(mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_NONE)\n",
     "    \n",
     "    if len(contours) > 0:\n",
-    "        # Find the maximum contour each time (on each frame)\n",
     "        max_contour = max(contours, key=cv2.contourArea)\n",
     "        \n",
-    "        # Only process if contour area is significant\n",
     "        if cv2.contourArea(max_contour) > 5000:\n",
-    "            # Draw maximum contour (blue color)\n",
     "            cv2.drawContours(test_window, [max_contour], -1, (255, 0, 0), 3)\n",
     "            \n",
-    "            # Find the convex hull \"around\" the max_contour\n",
     "            convhull = cv2.convexHull(max_contour, returnPoints=True)\n",
-    "            # Draw convex hull (red color)\n",
     "            cv2.drawContours(test_window, [convhull], -1, (0, 0, 255), 3, 2)\n",
     "            \n",
-    "            # Find the minimum y-value of the convexhull\n",
     "            min_y = h\n",
     "            final_point = (w, h)\n",
     "            for i in range(len(convhull)):\n",
@@ -450,21 +401,16 @@
     "                if point[1] < min_y:\n",
     "                    min_y = point[1]\n",
     "                    final_point = point\n",
-    "            # Draw a circle (black color) to the point with the minimum y-value\n",
     "            cv2.circle(test_window, final_point, 5, (0), 2)\n",
     "            \n",
-    "            # Find the center of the max contour\n",
     "            M = cv2.moments(max_contour)\n",
     "            if M[\"m00\"] != 0:\n",
     "                cX = int(M[\"m10\"] / M[\"m00\"])\n",
     "                cY = int(M[\"m01\"] / M[\"m00\"])\n",
-    "                # Draw circle (red color) in the center of max contour\n",
     "                cv2.circle(test_window, (cX, cY), 6, (0, 0, 255), 3)\n",
     "            \n",
-    "            # Find the polygon with \"extreme\" points\n",
     "            contour_poly = cv2.approxPolyDP(max_contour, 0.01*cv2.arcLength(max_contour, True), True)\n",
     "            \n",
-    "            # Find Defect points - use original contour instead of polygon\n",
     "            hull = cv2.convexHull(max_contour, returnPoints=False)\n",
     "            \n",
     "            if len(max_contour) > 3 and len(hull) > 3:\n",
@@ -487,12 +433,10 @@
     "                        \n",
     "                        points.append(mid_pts)\n",
     "                        \n",
-    "                        # Connect points with lines\n",
     "                        cv2.line(test_window, start_pts, end_pts, (0, 255, 0), 2)\n",
     "                        cv2.line(test_window, start_pts, far_pts, (0, 255, 255), 2)\n",
     "                        cv2.line(test_window, end_pts, far_pts, text_color, 2)\n",
     "                        \n",
-    "                        # Calculate distances\n",
     "                        a = np.sqrt((end_pts[0] - start_pts[0])**2 + \n",
     "                                   (end_pts[1] - start_pts[1])**2)\n",
     "                        b = math.sqrt((far_pts[0] - start_pts[0])**2 + \n",
@@ -500,14 +444,11 @@
     "                        c = math.sqrt((end_pts[0] - far_pts[0])**2 + \n",
     "                                     (end_pts[1] - far_pts[1])**2)\n",
     "                        \n",
-    "                        # Avoid division by zero\n",
     "                        if b * c == 0:\n",
     "                            continue\n",
     "                        \n",
-    "                        # Find angle\n",
     "                        angle = math.acos((b**2 + c**2 - a**2) / (2*b*c))\n",
     "                        \n",
-    "                        # If angle <= 90 degrees, count as a finger\n",
     "                        if angle <= np.pi/2:\n",
     "                            count += 1\n",
     "                            frame[0:40, w-40:w] = (0)\n",
@@ -516,15 +457,12 @@
     "                                    cv2.putText(frame, str(count+1), (w-35, 30), \n",
     "                                              font, 2, text_color, 2)\n",
     "                    \n",
-    "                    # If only one point or less, show 1 finger\n",
     "                    if len(points) <= 1:\n",
     "                        frame[0:40, w-40:w] = (0)\n",
     "                        cv2.putText(frame, \"1\", (w-35, 30), font, 2, text_color, 2)\n",
     "    \n",
-    "    # Write the processed frame to output\n",
     "    out.write(frame)\n",
     "    \n",
-    "    # Allow early exit with 'q' key\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
     "\n",
